--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ theme:
   facebook: 
   flickr: 
   github: "payshares"
-  google_plus: 
+  google_plus: "+PaysharesXPR"
   instagram: 
   linkedin:  # full URL
   pinterest: 
